	PR tree-optimization/16705 	* tree-ssa-alias.c (create_global_var): Set DECL_EXTERNAL on 	.GLOBAL_VAR.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@85254 138bc75d-0d04-0410-961f-82ee72b054a4